# zed-latex-preview

./: .gitignore  Cargo.toml  README.md  extension.toml
.claude/workflows/: task-10-11-docs-config-hover.js
.github/workflows/: ci.yml
docs/: plan-ref-cite-hover.md  rust-primary-refactor-plan.md
docs/superpowers/specs/: 2026-06-16-phase2-ref-hover-watcher-design.md
latex-index/: Cargo.toml
latex-index/src/: bibtex.rs  cursor.rs  dict.rs  index.rs  labels.rs  lsp_codec.rs  lsp_main.rs  macros.rs  main.rs  watcher.rs  workspace.rs
latex-index/tests/: end_to_end_ipc.rs  lsp_integration.rs
server/: README.md  package-lock.json  package.json  tsconfig.json
server/src/: cache.ts  cite_hover.ts  config.ts  doc_hover.ts  documents.ts  hover.ts  macros.ts  preamble.ts  ref_hover.ts  render.ts  rpc_types.ts  rust_sidecar.ts  scanner.ts  server.ts
server/test/: cache.test.ts  cite_hover.test.ts  config.test.ts  doc_hover.test.ts  hover.test.ts  macros.test.ts  preamble.test.ts  ref_hover.test.ts  render.smoke.ts  rust_sidecar.test.ts  scanner.test.ts
src/: lib.rs  preview_lsp_invocation.rs  preview_lsp_workspace_config.rs
