[package]
name = "latex-index"
version = "0.1.0"
edition = "2021"
description = "Rust native language server for the Zed LaTeX hover-preview extension: LSP transport, workspace-wide label/citation/macro indexing, and MathJax SVG hover rendering."
license = "MIT"
publish = false

[[bin]]
name = "latex-preview-lsp"
path = "src/lsp_main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
dashmap = "5"
anyhow = "1"
thiserror = "1"
notify = "6"
notify-debouncer-mini = "0.4"
lsp-server = "0.7"
lsp-types = "0.95"
base64 = "0.22"
mathjax-svg-rs = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
